# dive-internship

./: .gitignore  README.md  manage.py  pyproject.toml
calpy/: asgi.py  settings.py
src/: manage.py
src/accounts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_alter_customuser_options.py  0004_normaluser.py  0005_adminuser_manageruser.py  0006_remove_manageruser_customuser_ptr_and_more.py  0007_customuser_calories_per_day.py
src/accounts/signals/: handlers.py
src/api/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_alter_entry_calories.py  0003_entry_owner.py  0004_alter_entry_options.py
src/api/views/: __init__.py  entries.py  users.py
src/calpy/: asgi.py  urls.py  wsgi.py
src/calpy/settings/: base.py  dev.py
src/helper/: tests.py
